--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "qrcode.react": "^4.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
